--- a/static/css/urllist.css
+++ b/static/css/urllist.css
@@ -27,11 +27,14 @@ div.rm_realurllist {
       div.rm_realurllist .wrap_urlist {
         width: 70vw; } }
   div.rm_realurllist .rm_postblock {
+    transition: filter 0.3s ease;
     min-height: 200px;
     box-sizing: border-box;
     border: solid 1px black;
     position: relative;
     max-width: 97vw; }
+    div.rm_realurllist .rm_postblock:hover {
+      filter: brightness(0.8); }
   div.rm_realurllist .content_mini {
     font-size: 0.7em;
     text-align: left;
