--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@ div#RomNavi div.rm_icon {
     opacity: 0.5; }
 
 body {
-  background-image: linear-gradient(94deg, rgba(200, 200, 200, 0.7) 80%, #7a7a7a); }
+  background-color: white !important; }
 
 footer#rm_footer2 {
   opacity: 1 !important;
