--- a/basecom/templates/basecom/profile.html
+++ b/basecom/templates/basecom/profile.html
@@ -1,7 +1,9 @@
 {% extends "basecom/base.html" %}
 
 {% block content %}
-<div data-baseurl=""  data-picurl="/static/pic" id="RomProf"></div>
+<div data-baseurl="" 
+ style="overflow:hidden"
+ data-picurl="/static/pic" id="RomProf"></div>
 
 
 {% endblock %}
