--- a/static/css/home.css
+++ b/static/css/home.css
@@ -85,9 +85,11 @@
     #rom_urllist2 div.wrapper a.rmlinksimg {
       width: 300px;
       height: 300px;
-      background-color: rgba(200, 0, 0, 0.5);
       margin: 5px;
       position: relative;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: 25% 25%;
       transition: transform 0.3s ease;
       font-size: 1.5em;
       display: inline-block;
