--- a/static/css/home.css
+++ b/static/css/home.css
@@ -85,6 +85,7 @@
     #rom_urllist2 div.wrapper a.rmlinksimg {
       width: 300px;
       height: 300px;
+      background-color: #c8c8c8;
       margin: 5px;
       position: relative;
       background-repeat: no-repeat;
