--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -22,15 +22,43 @@ html, body {
   height: 100%;
 }
 </style>
+
+
+
 <div 
  style="opacity:0;"
  data-movieurl="/static/pic/opening.mp4" 
- data-baseurl=""  data-picurl="/static/pic" id="RomNavi" style="">
+ data-baseurl=""  data-picurl="/static/pic" id="RomNavi2" style="">
+ <div id="rmnavi" class="navi">
+
+ <div class="naviwrap">
+  <div class="rm_icon icon"
+   onclick="location.href='mailto:'"
+   style="background-image: url(&quot;/static/pic/mail_ico.png&quot;);"></div>
+  <div class="rm_icon icon"
+   onclick="location.href='tel:'"
+   style="background-image: url(&quot;/static/pic/call_ico.png&quot;);"></div>
+  <div class="rm_icon icon"
+   onclick="location.href='instagram://app'"
+   style="background-image: url(&quot;/static/pic/inst_ico.png&quot;);"></div>
+  <div class="rm_icon icon"
+   onclick="location.href='https://twitter.com/rom30351460/'"
+   style="background-image: url(&quot;/static/pic/twitter_ico.png&quot;);"></div>
+
+ <div id="batsu" class="rm_icon" style="" >
 <a href="index.html" data-linkurl="index.html" data-titlename="案内">案内</a>
 <a href="loglist.html" data-linkurl="loglist.html"  data-titlename="活動紹介">活動紹介</a>
 <a href="profile.html" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
 <a href="contact.html" data-linkurl="contact.html"  data-titlename="Contact">Contact</a>
+ </div>
+
+ </div>
+
+
+
+ </div>
 </div>
+
 
 {% if host != "www.skyopener2.shop" %}
 <div class="rmdmin"></div>
