--- a/static/css/articles.css
+++ b/static/css/articles.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=DotGothic16");
+div#rom_content {
+  opacity: 1 !important; }
+  div#rom_content .romdesign {
+    background-color: rgba(240, 240, 240, 0.8) !important; }
+
 div#rom_content > div {
   padding-top: 3em;
   padding-bottom: 3em; }
