--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -45,11 +45,11 @@ html, body {
    onclick="location.href='https://twitter.com/rom30351460/'"
    style="background-image: url(&quot;/static/pic/twitter_ico.png&quot;);"></div>
 
- <div id="batsu" class="rm_icon" style="opacity:0;" >
+ <div id="batsu" class="rm_icon" >
 <a href="index.html" data-linkurl="index.html" data-titlename="案内">案内</a>
-<a href="loglist.html" data-linkurl="loglist.html"  data-titlename="活動紹介">活動紹介</a>
-<a href="profile.html" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
-<a href="contact.html" data-linkurl="contact.html"  data-titlename="Contact">Contact</a>
+<a href="loglist.html" style="opacity:0;" data-linkurl="loglist.html"  data-titlename="活動紹介">活動紹介</a>
+<a href="profile.html" style="opacity:0;" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
+<a href="contact.html" style="opacity:0;" data-linkurl="contact.html"  data-titlename="Contact">Contact</a>
  </div>
 
  </div>
