--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -46,7 +46,7 @@ html, body {
    style="background-image: url(&quot;/static/pic/twitter_ico.png&quot;);"></div>
 
  <div id="batsu" class="rm_icon" >
-<a href="index.html" data-linkurl="index.html" data-titlename="案内">案内</a>
+<a href="index.html" style="opacity:0;" data-linkurl="index.html" data-titlename="案内">案内</a>
 <a href="loglist.html" style="opacity:0;" data-linkurl="loglist.html"  data-titlename="活動紹介">活動紹介</a>
 <a href="profile.html" style="opacity:0;" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
 <a href="contact.html" style="opacity:0;" data-linkurl="contact.html"  data-titlename="Contact">Contact</a>
