--- a/basecom/templates/basecom/post.html
+++ b/basecom/templates/basecom/post.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div id="rom_content" data-title="{{content.post_title}}" data-title="{{content.created_at}}">
+<div id="rom_content" style="opacity:0;" data-title="{{content.post_title}}" data-title="{{content.created_at}}">
 <div id="rom_content_title"> {{content.post_title}}</div>
 <style>
 </style>
@@ -15,7 +15,44 @@
 
 
 <link rel="stylesheet" href="{% static 'css/articles.css' %}?p={{fileparam2}}">
+<script>
+    const overlay = document.createElement('div');
+    overlay.style.position = 'fixed';
+    overlay.style.top = '0';
+    overlay.style.left = '0';
+    overlay.style.width = '100vw';
+    overlay.style.height = '100vh';
+    overlay.style.background = 'rgba(0, 0, 0, 0.8)';
+    overlay.style.opacity = '0';
+    overlay.style.transition ="opacity 0.5s ease";
+    overlay.style.display = 'flex';
+    overlay.style.pointerEvents = 'none';
+    overlay.style.justifyContent = 'center';
+    overlay.style.alignItems = 'center';
+    overlay.style.zIndex = '10000';
+    document.body.appendChild(overlay);
 
+    const overlayImg = document.createElement('img');
+    overlayImg.style.maxHeight = '80%';
+    overlayImg.style.maxWidth = '80%';
+    overlay.appendChild(overlayImg);
+
+    document.addEventListener('click', (e) => {
+        const imgElement = e.target.closest('img');
+
+        if (imgElement) {
+            overlayImg.src = imgElement.src;
+
+            overlay.style.opacity = '1';
+            overlay.style.pointerEvents = 'auto';
+
+            overlay.onclick = () => {
+    overlay.style.opacity = '0';
+    overlay.style.pointerEvents = 'none';
+            };
+        }
+    });
+</script>
 
 {% if blogparts %}
 {% include 'basecom/parts/blogparts.html' with blogparts=blogparts %}
