--- a/static/css/articles.css
+++ b/static/css/articles.css
@@ -3,10 +3,17 @@ div#rom_content {
   opacity: 1 !important; }
   div#rom_content .romdesign {
     background-color: rgba(240, 240, 240, 0.8) !important; }
+    @media screen and (min-width: 600px) {
+      div#rom_content .romdesign {
+        padding-left: 3em !important;
+        padding-right: 3em !important; } }
 
 div#rom_content > div {
   padding-top: 3em;
   padding-bottom: 3em; }
+
+div:has(> div#rom_content_title) {
+  padding: 0em !important; }
 
 div#rom_content:has(div#rom_content_content) {
   text-align: center; }
