--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -33,7 +33,7 @@ html, body {
 
  <div class="naviwrap">
   <div class="rm_icon icon"
-   onclick="location.href='mailto:'"
+   onclick="location.href='/contact.html'"
    style="background-image: url(&quot;/static/pic/mail_ico.png&quot;);"></div>
   <div class="rm_icon icon"
    onclick="location.href='tel:'"
