--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -13,7 +13,6 @@
 <style>
 body{
  font-size:"0.1em";
-// opacity:0;
  opacity:1;
 }
 html, body {
@@ -21,10 +20,58 @@ html, body {
   padding: 0;
   height: 100%;
 }
+
+div#rmcover{
+position:fixed;
+width:100vw;
+height:100vh;
+background-color:white;
+z-index:9999;
+transition: opacity 1s ease;
+opacity:1;
+pointer-events:none;
+
+}
+#rmcover.hidden {
+  opacity: 0 !important;
+}
 </style>
 
 
 
+<div id="rmcover"></div>
+<script defer>
+
+ setTimeout(()=>{
+console.log(window.location.hostname);
+    //skyopener2.shop
+ },1);
+
+ const delay=(ms)=>{
+  return new Promise(resolve => setTimeout(resolve, ms));
+}
+(async () => {
+ for(;;){
+ if(window.location.hostname!=="skyopener2.shop"){
+
+  document.getElementById("rmcover").classList.add("hidden");
+  break;
+
+ }else{
+
+  if(document.getElementById("vdbanner")){
+  await delay(100);
+  document.getElementById("rmcover").classList.add("hidden");
+  break;
+  }
+
+ }
+ }
+ 
+
+})();
+
+</script>
 <div 
  style="opacity:0;"
  data-movieurl="/static/pic/opening.mp4" 
