--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -64,6 +64,7 @@ console.log(window.location.hostname);
   document.getElementById("rmcover").classList.add("hidden");
   break;
   }
+  await delay(1000);
 
  }
  }
