--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -23,6 +23,7 @@ html, body {
 
 div#rmcover{
 position:fixed;
+top:0;left:0;
 width:100vw;
 height:100vh;
 background-color:white;
@@ -64,7 +65,7 @@ console.log(window.location.hostname);
   document.getElementById("rmcover").classList.add("hidden");
   break;
   }
-  await delay(1000);
+  await delay(500);
 
  }
  }
