--- a/static/css/articles.css
+++ b/static/css/articles.css
@@ -76,6 +76,14 @@ div#rom_content:has(div#rom_content_content) {
     box-sizing: border-box;
     background-color: #010101;
     max-width: 90%; }
+    #rom_content_content img.medium {
+      object-fit: cover;
+      height: auto !important;
+      width: 80%; }
+    #rom_content_content img.large {
+      object-fit: cover;
+      height: auto !important;
+      width: 100%; }
   #rom_content_content img.left {
     margin-left: 1em !important; }
   #rom_content_content img.right {
