--- a/static/css/urllist.css
+++ b/static/css/urllist.css
@@ -28,52 +28,88 @@ div.rm_realurllist {
         width: 70vw; } }
   div.rm_realurllist .rm_postblock {
     transition: filter 0.3s ease;
-    min-height: 200px;
     box-sizing: border-box;
     border: solid 1px black;
     position: relative;
     max-width: 97vw; }
     div.rm_realurllist .rm_postblock:hover {
       filter: brightness(0.8); }
+    @media screen and (min-width: 600px) {
+      div.rm_realurllist .rm_postblock {
+        height: 300px; } }
+    @media screen and (max-width: 600px) {
+      div.rm_realurllist .rm_postblock {
+        height: 20vh; } }
   div.rm_realurllist .content_mini {
-    font-size: 0.7em;
     text-align: left;
-    padding-top: 1em;
-    padding-right: 1em;
     box-sizing: border-box;
     line-height: 1em;
     min-height: 6em; }
-    @media screen and (max-width: 1000px) {
+    @media screen and (max-width: 600px) {
       div.rm_realurllist .content_mini {
-        padding-left: 0.5em; } }
-    @media screen and (min-width: 1000px) {
+        padding-left: 0.5em;
+        padding-top: 0.1em;
+        padding-right: 0.1em;
+        font-size: 0.4em; } }
+    @media screen and (min-width: 600px) {
       div.rm_realurllist .content_mini {
-        padding-left: 2em; } }
-  div.rm_realurllist .title {
-    padding-top: 0.6em;
-    padding-left: 0.6em;
-    box-sizing: border-box;
+        padding-left: 2em;
+        padding-top: 1em;
+        padding-right: 1em;
+        font-size: 0.7em; } }
+  div.rm_realurllist a {
     text-align: left;
-    line-height: 2.2em; }
-    div.rm_realurllist .title > img {
-      height: 2.2em !important;
-      width: 3em !important;
-      display: inline-block !important;
-      background-color: rgba(0, 0, 0, 0);
-      vertical-align: middle; }
-      @media screen and (max-width: 1000px) {
-        div.rm_realurllist .title > img {
-          margin-right: 0.1em; } }
-      @media screen and (min-width: 1000px) {
-        div.rm_realurllist .title > img {
-          margin-right: 1em; } }
-  div.rm_realurllist .desc {
-    font-size: 0.5em;
-    text-align: right;
-    padding-right: 2em;
-    box-sizing: border-box;
-    position: relative;
-    z-index: 2; }
+    width: 100%;
+    height: 100%;
+    display: flex; }
+  div.rm_realurllist img {
+    height: 100% !important;
+    aspect-ratio: 1 / 1;
+    display: inline-block !important;
+    background-color: rgba(0, 0, 0, 0);
+    vertical-align: top; }
+    @media screen and (max-width: 1000px) {
+      div.rm_realurllist img {
+        margin-right: 0.1em; } }
+    @media screen and (min-width: 1000px) {
+      div.rm_realurllist img {
+        margin-right: 1em; } }
+  div.rm_realurllist .text-wrap {
+    overflow: hidden;
+    display: inline-block; }
+    @media screen and (min-width: 600px) {
+      div.rm_realurllist .text-wrap {
+        padding: 0.1em; } }
+    @media screen and (max-width: 600px) {
+      div.rm_realurllist .text-wrap {
+        padding: 0.0em; } }
+    div.rm_realurllist .text-wrap .title {
+      box-sizing: border-box;
+      text-align: left;
+      display: inline-block; }
+      @media screen and (min-width: 600px) {
+        div.rm_realurllist .text-wrap .title {
+          font-size: 1em;
+          padding-top: 0.6em;
+          padding-left: 0.6em; } }
+      @media screen and (max-width: 600px) {
+        div.rm_realurllist .text-wrap .title {
+          font-size: 0.6em;
+          padding-top: 0.1em;
+          padding-left: 0.1em; } }
+    div.rm_realurllist .text-wrap .desc {
+      text-align: right;
+      box-sizing: border-box;
+      position: relative;
+      z-index: 2; }
+      @media screen and (min-width: 600px) {
+        div.rm_realurllist .text-wrap .desc {
+          font-size: 0.5em;
+          padding-right: 2em; } }
+      @media screen and (max-width: 600px) {
+        div.rm_realurllist .text-wrap .desc {
+          font-size: 0.05em;
+          padding-right: 0.1em; } }
   div.rm_realurllist div.rm_postblock {
     background-color: rgba(235, 230, 230, 0.7);
     display: inline-block;
