--- a/static/css/urllist.css
+++ b/static/css/urllist.css
@@ -25,7 +25,7 @@ div.rm_realurllist {
     max-width: 97vw; }
     @media screen and (min-width: 600px) {
       div.rm_realurllist .wrap_urlist {
-        width: 70vw; } }
+        width: 50vw; } }
   div.rm_realurllist .rm_postblock {
     transition: filter 0.3s ease;
     box-sizing: border-box;
@@ -50,7 +50,7 @@ div.rm_realurllist {
         padding-left: 0.5em;
         padding-top: 0.1em;
         padding-right: 0.1em;
-        font-size: 0.4em; } }
+        font-size: 0.3em; } }
     @media screen and (min-width: 600px) {
       div.rm_realurllist .content_mini {
         padding-left: 2em;
@@ -75,6 +75,8 @@ div.rm_realurllist {
       div.rm_realurllist img {
         margin-right: 1em; } }
   div.rm_realurllist .text-wrap {
+    position: relative;
+    flex-grow: 1;
     overflow: hidden;
     display: inline-block; }
     @media screen and (min-width: 600px) {
@@ -98,9 +100,11 @@ div.rm_realurllist {
           padding-top: 0.1em;
           padding-left: 0.1em; } }
     div.rm_realurllist .text-wrap .desc {
+      position: absolute;
+      bottom: 0px;
+      right: 0px;
       text-align: right;
       box-sizing: border-box;
-      position: relative;
       z-index: 2; }
       @media screen and (min-width: 600px) {
         div.rm_realurllist .text-wrap .desc {
@@ -122,7 +126,7 @@ div.rm_realurllist {
         font-size: 2em; } }
     @media screen and (min-width: 600px) {
       div.rm_realurllist div.rm_postblock {
-        width: 70vw;
+        width: inherit;
         font-size: 1.5em; } }
   div.rm_realurllist a {
     color: black;
