--- a/static/css/articles.css
+++ b/static/css/articles.css
@@ -2,7 +2,7 @@
 div.rm_describe1 {
   text-align: left;
   position: relative;
-  padding-top: 8vh !important;
+  padding-top: 3vh !important;
   padding-bottom: 8vh !important; }
   div.rm_describe1 #detail {
     color: #6e6ec8; }
@@ -18,7 +18,10 @@ div#rom_content {
   div#rom_content .romdesign {
     display: inline-block;
     box-sizing: border-box;
-    background-color: rgba(240, 240, 240, 0.8) !important; }
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 4px solid rgba(20, 20, 10, 0.3);
+    border-radius: 10px;
+    box-shadow: 3px 3px 2px 1px rgba(200, 200, 255, 0.5); }
     @media screen and (max-width: 600px) {
       div#rom_content .romdesign {
         width: 100vw; } }
@@ -29,7 +32,6 @@ div#rom_content {
         padding-right: 3em !important; } }
 
 div#rom_content > div {
-  border: 4px solid #c8c864;
   padding-top: 3em;
   padding-bottom: 3em; }
 
@@ -38,7 +40,8 @@ div#rom_content:has(div#rom_content_content) {
 
 #rom_content_title {
   display: block;
-  color: #969664; }
+  color: #969664;
+  margin-bottom: 1em; }
 
 @media screen and (min-width: 600px) {
   #rom_content_title {
