--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,10 +1,27 @@
+@charset "UTF-8";
 .romyajirushi {
   box-shadow: none !important; }
 
+#parallax {
+  position: relative;
+  background-position: center;
+  overflow: hidden;
+  background-image: url("/static/pic/para.png");
+  background-size: 100% 300%;
+  background-position: bottom; }
+
+@media screen and (min-width: 600px) {
+  div.rmblock {
+    height: 5vh;
+    width: 100vw;
+    background: white;
+    mix-blend-mode: normal;
+    /* 通常のブレンドモード（透過させる） */ } }
+
 #rom_urllist2 {
+  background-color: rgba(0, 0, 0, 0.7);
   font-family: DotGothic16;
   position: relative;
-  background-color: rgba(0, 0, 0, 0.8);
   text-align: right;
   overflow: hidden;
   display: flex !important;
@@ -14,10 +31,6 @@
   border-bottom: double rgba(252, 252, 252, 0.9) 6px; }
   @media screen and (max-width: 600px) {
     #rom_urllist2 {
-      margin-top: 1vh;
-      margin-bottom: 1vh;
-      margin-left: 1vh;
-      margin-left: 0.1vh;
       height: 600px;
       padding-left: 0vw;
       padding-right: 1vw;
@@ -27,7 +40,6 @@
       padding-bottom: 10vh; } }
   @media screen and (min-width: 600px) {
     #rom_urllist2 {
-      margin: 4vh;
       padding-left: 7vw;
       padding-right: 7vw;
       padding-top: 10vh;
@@ -93,7 +105,7 @@
     #rom_urllist2 div.wrapper a.rmlinksimg {
       width: 300px;
       height: 300px;
-      background-color: #c8c8c8;
+      background-color: white;
       margin: 5px;
       position: relative;
       background-repeat: no-repeat;
@@ -134,7 +146,8 @@
         color: white; }
 
 #romMidashi {
-  background-color: #467a47;
+  font-family: DotGothic16;
+  background-color: rgba(0, 0, 0, 0.9);
   font-size: 2.5em;
   color: white;
   height: 4em;
