--- a/static/css/home.css
+++ b/static/css/home.css
@@ -91,6 +91,7 @@
         width: 1200px;
         overflow-x: scroll;
         overflow-y: hidden;
+        padding-right: 70vw;
         display: grid;
         grid-template-columns: repeat(2, 300px);
         grid-auto-rows: 300px;
