--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -44,6 +44,48 @@ window.addEventListener('scroll', function() {
 <div id="rmwrapper"
  class="wrapper">
  {% for p in posted %}
+
+
+<style>
+  .tooltip {
+    
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+   background-color:red;
+  }
+
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 300px;
+    height: 300px;
+    background-color: blue;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    position: absolute;
+    z-index: 99991;
+    bottom: 125%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
+</style>
+<div class="tooltip">Hover me
+  <span class="tooltiptext">Tooltip text</span>
+</div>
+
+
+
+
+
  <a 
   class="rmlinksimg"
   style="background-image:url('{{p.post_pic|default:"/static/pic/nophoto.jpg"}}')"
