--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -78,7 +78,7 @@ window.addEventListener('scroll', function() {
     opacity: 1;
   }
 </style>
-<div class="tooltip">Hover me
+<div class="tooltip" style="display:none">Hover me
   <span class="tooltiptext">Tooltip text</span>
 </div>
 
