--- a/basecom/templates/basecom/parts/loading.html
+++ b/basecom/templates/basecom/parts/loading.html
@@ -4,7 +4,6 @@ position:fixed;
 top:0;left:0;
 width:100vw;
 height:100vh;
-background-color: #333;
 z-index:9999;
 transition: opacity 0.5s ease;
 opacity:1;
@@ -18,6 +17,18 @@ align-items: center;
   opacity: 0 !important;
 }
 
+.rmlogo2 {
+ position:absolute;
+ left:47vw;
+  width:6vw;
+  //top:50vh;
+  height:6vw;
+  background:green;
+  border:1px rgba(255,255,0,0.5) solid;
+  opacity:0;
+  animation: spin 1s infinite;
+  border-radius:10px
+}
 .rmlogo {
   font-size: 48px;
   font-weight: bold;
@@ -26,24 +37,106 @@ align-items: center;
   animation: blink 1s infinite;
 }
 
+@keyframes spin {
+  0%, 30%,90%, 100% {
+    transform: scale(1) rotate(18deg);
+  }
+  60% {
+    transform: scale(1.2) rotate(36deg);
+  }
+}
+
+
 @keyframes blink {
   0%, 20%, 100% {
     opacity: 1;
   }
   50% {
-    opacity: 0;
+    opacity: 0.4;
   }
 }
+
+    .segment {
+     z-index:9998;
+      position: absolute;
+      width: 50%;
+      height: 50%;
+      background: #333;
+      opacity: 1;
+      transition: transform 1s ease, opacity 1s ease;
+      transition-delay: 1s;
+      box-sizing:border-box;
+    }
+
+    .segment-top-left {
+      top: 0;
+      left: 0;
+      border-right:5px rgba(100,100,100,0.5) solid;
+      border-bottom:5px rgba(100,100,100,0.5) solid;
+    }
+
+    .segment-top-right {
+      top: 0;
+      right: 0;
+      border-left:5px rgba(100,100,100,0.5) solid;
+      border-bottom:5px rgba(100,100,100,0.5) solid;
+    }
+
+    .segment-bottom-left {
+      bottom: 0;
+      left: 0;
+      border-right:5px rgba(100,100,100,0.5) solid;
+      border-top:5px rgba(100,100,100,0.5) solid;
+    }
+
+    .segment-bottom-right {
+      bottom: 0;
+      right: 0;
+      border-left:5px rgba(100,100,100,0.5) solid;
+      border-top:5px rgba(100,100,100,0.5) solid;
+    }
+
+    .fade-out .segment-top-left {
+      transform: translate(-100%, -100%);
+      opacity: 0;
+    }
+
+    .fade-out .segment-top-right {
+      transform: translate(100%, -100%);
+      opacity: 0;
+    }
+
+    .fade-out .segment-bottom-left {
+      transform: translate(-100%, 100%);
+      opacity: 0;
+    }
+
+    .fade-out .segment-bottom-right {
+      transform: translate(100%, 100%);
+      opacity: 0;
+    }
+
+
 </style>
 
 
 
-<div id="rmcover"><div class="rmlogo">Loading...</div></div>
+  <div class="container">
+    <div class="segment segment-top-left"></div>
+    <div class="segment segment-top-right"></div>
+    <div class="segment segment-bottom-left"></div>
+    <div class="segment segment-bottom-right"></div>
+  </div>
+<div id="rmcover">
+ <div class="rmlogo2"></div>
+ <div class="rmlogo">loading...</div>
+</div>
 <script defer>
+    function triggerAnimation() {
+      const container = document.querySelector('.container');
+      container.classList.add('fade-out');
+    }
 
- setTimeout(()=>{
-console.log(window.location.hostname);
- },1);
 
  const delay=(ms)=>{
   return new Promise(resolve => setTimeout(resolve, ms));
@@ -54,6 +147,7 @@ console.log(window.location.hostname);
 
   await delay(1000);
   document.getElementById("rmcover").classList.add("hidden");
+triggerAnimation() 
   break;
 
  }else{
