--- a/basecom/templates/basecom/parts/loading.html
+++ b/basecom/templates/basecom/parts/loading.html
@@ -155,6 +155,7 @@ triggerAnimation()
   if(document.getElementById("vdbanner")){
   await delay(100);
   document.getElementById("rmcover").classList.add("hidden");
+triggerAnimation() 
   break;
   }
   await delay(100);
