--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -98,7 +98,7 @@ html, body {
      opacity:0.1;
       top: 0;
       left: 0;
-      width: 100%;
+      width: 100vw;
       height: 100%;
       z-index: -1;
 
