--- a/basecom/templates/basecom/parts/loading.html
+++ b/basecom/templates/basecom/parts/loading.html
@@ -121,7 +121,7 @@ align-items: center;
 
 
 
-  <div class="container" style="position:fixed;width:100vw;height:100vh">
+  <div class="container" style="z-index:9999;position:fixed;width:100vw;height:100vh">
     <div class="segment segment-top-left"></div>
     <div class="segment segment-top-right"></div>
     <div class="segment segment-bottom-left"></div>
