--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -6,6 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html;" charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
      <link rel="stylesheet" href="{% static 'css/style.css' %}?p={{fileparam2}}">
+     <link rel="stylesheet" href="{% static 'css/base.css' %}?p={{fileparam2}}">
 <link href='https://fonts.googleapis.com/css?family=Dela Gothic One' rel='stylesheet' type='text/css'>
 <link rel="icon" href="{% static 'favicon.png' %}">
     </head>
@@ -23,34 +24,36 @@ html, body {
 
 </style>
 
-{% include 'basecom/parts/loading.html' %}
+ <div style="display:none">{% include 'basecom/parts/loading.html' %}
+  </div>
 
 <div 
- style="opacity:0;"
+ style="opacity:1;"
  data-movieurl="/static/pic/opening.mp4" 
- data-baseurl=""  data-picurl="/static/pic" id="RomNavi2" style="">
+ data-baseurl=""  data-picurl="/static/pic" id="RomNavi3" style="">
  <div id="rmnavi" class="navi">
 
  <div class="naviwrap">
-  <div class="rm_icon icon"
-   onclick="location.href='/contact.html'"
-   style="background-image: url(&quot;/static/pic/mail_ico.png&quot;);"></div>
-  <div class="rm_icon icon"
-   onclick="location.href='tel:'"
-   style="background-image: url(&quot;/static/pic/call_ico.png&quot;);"></div>
-  <div class="rm_icon icon"
-   onclick="location.href='instagram://app'"
-   style="background-image: url(&quot;/static/pic/inst_ico.png&quot;);"></div>
-  <div class="rm_icon icon"
-   onclick="location.href='https://twitter.com/rom30351460/'"
-   style="background-image: url(&quot;/static/pic/twitter_ico.png&quot;);"></div>
+ <div id="batsu2" class="rmnavi" >
+<a href="index.html" style="opacity:1;" data-linkurl="index.html" data-titlename="案内">案内</a>
+<a href="loglist.html" style="opacity:1;" data-linkurl="loglist.html"  data-titlename="活動紹介">活動紹介</a>
+<a href="profile.html" style="opacity:1;" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
+<a href="contact.html" style="opacity:1;" data-linkurl="contact.html"  data-titlename="Contact">Contact</a>
+ <div id="rmnavi2" class="rmnavi2" style="width:100vw;height:100px;background-color:rgba(211,211,211,0.4);color:white;text-align:center;">
 
- <div id="batsu" class="rm_icon" >
-<a href="index.html" style="opacity:0;" data-linkurl="index.html" data-titlename="案内">案内</a>
-<a href="loglist.html" style="opacity:0;" data-linkurl="loglist.html"  data-titlename="活動紹介">活動紹介</a>
-<a href="profile.html" style="opacity:0;" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
-<a href="contact.html" style="opacity:0;" data-linkurl="contact.html"  data-titlename="Contact">Contact</a>
  </div>
+ </div>
+<script>
+window.addEventListener('DOMContentLoaded', () => {
+const rmnavi = document.querySelector('.rmnavi');
+const rmdmin = document.querySelector('.rmdmin');
+
+if (rmnavi && rmdmin) {
+  const rmnaviHeight = rmnavi.offsetHeight; // .rmnavi の高さを取得
+  rmdmin.style.height = `${rmnaviHeight}px`; // .rmdmin に同じ高さを設定
+}
+  });
+</script>
 
  </div>
 
@@ -105,6 +108,7 @@ html, body {
     }
 </style>
 <script>
+ /*
   const canvas = document.getElementById('rmcanvas');
   const ctx = canvas.getContext('2d');
 
@@ -192,6 +196,7 @@ const interval = 1000 / fps;
 
   // アニメーションを開始
   updateBalls();
+ */
 </script>
 
 </body>
