--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<div data-baseurl="" data-picurl="/static/pic" id="RomMain" style="overflow:hidden;text-align:center;min-height:80vh;opacity:0;">
+<div data-baseurl="" data-picurl="/static/pic" id="RomMain" style="overflow:hidden;text-align:center;opacity:1;">
  <a href="https://wordpress.com/ja/"
   data-href="https://wordpress.com/ja/"
   data-title="Wordpress"
