--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   position: fixed;
   z-index: 99999;
+  top: 0px;
   width: 100vw;
   background-color: black; }
   @media screen and (min-width: 768px) {
