--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -63,7 +63,7 @@ if (rmnavi && rmdmin) {
 </div>
 
 
-{% if host != "www.skyopener2.shop" %}
+{% if host != "skyopener2.shop" %}
 <div class="rmdmin"></div>
 {% else %}
 <div class="rmdmin_ad"></div>
