--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -73,7 +73,7 @@ if (rmnavi && rmdmin) {
 }
 (async () => {
  for(;;){
-  let rmnavi = document.getElementById('rmnavi');
+  let rmnavi = document.querySelector('.rmnavi');
   let vd = document.getElementById("vdbanner");
   if(vd){
   await delay(100);
