--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -69,6 +69,7 @@ if (rmnavi && rmdmin) {
 <div class="rmdmin_ad"></div>
 <script>
  const delay=(ms)=>{
+  console.log("delay")
   return new Promise(resolve => setTimeout(resolve, ms));
 }
 (async () => {
