--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -80,7 +80,7 @@ if (rmnavi && rmdmin) {
   let rmdmin = document.querySelector('.rmdmin_ad');
     if (rmnavi && rmdmin) {
       let rmnaviHeight = rmnavi.offsetHeight;
-      let vdHeight = vd.offsetHeight;
+      let vdHeight = vd.offsetHeight+20;
       rmdmin.style.height = `${rmnaviHeight-vdHeight}px`;
     }
 
