--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .romyajirushi {
   box-shadow: none !important; }
 
@@ -14,9 +13,8 @@
   div.rmblock {
     height: 5vh;
     width: 100vw;
-    background: white;
-    mix-blend-mode: normal;
-    /* 通常のブレンドモード（透過させる） */ } }
+    background: black;
+    mix-blend-mode: normal; } }
 
 #rom_urllist2 {
   background-color: rgba(0, 0, 0, 0.7);
@@ -112,6 +110,7 @@
       background-repeat: no-repeat;
       background-size: contain;
       background-position: 25% 25%;
+      overflow: hidden;
       transition: transform 0.3s ease;
       z-index: 9;
       font-size: 1.5em;
@@ -120,6 +119,15 @@
       color: white;
       white-space: nowrap;
       padding-top: 0.1em; }
+      #rom_urllist2 div.wrapper a.rmlinksimg:hover .rmlinktitle {
+        animation: slide 8s infinite linear; }
+@keyframes slide {
+  0% {
+    transform: translate(0%, 0%); }
+  50% {
+    transform: translate(-100%, 0%); }
+  100% {
+    transform: translate(-200%, 0%); } }
       #rom_urllist2 div.wrapper a.rmlinksimg > .rmlinktitle {
         position: absolute;
         bottom: 0px;
